cluster-bootstrap/templates/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    app: traefik
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
  labels:
    app: rook-ceph
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: metallb-system
  labels:
    app: metallb-system
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
